bdr.BDR.scala.error
Erreur de compilation :
BDR:2: error: value unary_! is not a member of String
while(!fini){
      ^BDR:3: error: not found: value R
  if(litMessage()==R){
                   ^BDR:7: error: not found: value L
  if(litMessage()==L){
                   ^BDR:11: error: not found: value I
  if(litMessage()==I){
                   ^BDR:16: error: not found: value A
  if(litMessage()==A){
                   ^BDR:19: error: not found: value B
  if(litMessage()==B){
                   ^BDR:23: error: not found: value C
  if(litMessage()==C){
                   ^BDR:28: error: not found: value Z
  if(litMessage()==Z){
                   ^BDR:31: error: not found: value Y
  if(litMessage()==Y){
                   ^BDR:35: error: not found: value X
  if(litMessage()==X){
                   ^